--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-     <img src="./icon.jpg" alt="icon">
+     <img src="https://www.freepik.com/free-vector/cheerful-funny-cartoon-sun_4167299.htm" alt="icon">
      <h1>Weather</h1>
     </header>
     <div class="main">
