--- a/public/index.html
+++ b/public/index.html
@@ -5,26 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <title>Weather App</title>
 </head>
 <body>
     <header>
-     <img src="https://www.freepik.com/free-vector/cheerful-funny-cartoon-sun_4167299.htm" alt="icon">
+        <i class="fas fa-cloud-sun"></i>
      <h1>Weather</h1>
     </header>
     <div class="main">
         <p>
-            Enter any location or ZIP/PIN code to get weather details
+            Enter any location to get weather details
         </p>
         <form>
-            <input type="text"></input>
+            <input type="text" placeholder="Enter a location here....."></input>
             <button type="submit">GO</button>
         </form>
         
     <div class="search">
-
+        
     </div>
-    <div class="data">
+    <div class="dataDisplay">
 
     </div>
     </div>
