--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         <div class="loader hide">
             <div></div>
         </div>
-        <div class="wrapperTo-> hide">
+        <div class="wrapperTo hide">
             <div class="container">
                 <div class="locationName">California,SF</div>
                 <div class="summary">bright sky today</div>
