--- a/public/addLoc.html
+++ b/public/addLoc.html
@@ -11,15 +11,18 @@
 <body>
     <header>
       <img src="./img/icon.png" alt="icon">
-      <form>
+      <form> 
         <input type="text" placeholder="Location..."></input>
         <button type="submit">GO</button>
       </form>
     </header>
     <br>
+    <div class="addLoc-main">
+        
+    </div>
     <!-- Powred by<a href="#">Dark Sky API</a> and <a href="#">Mapbox API</a> -->
 
-    <div class="main">
+    <!-- <div class="main">
         <div class="loader hide">
             <div></div>
         </div>
@@ -55,7 +58,8 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
     <script src="./main.js"></script>
+    <script src="./addLoc.js"></script>
 </body>
 </html>
