add location page frontend complete

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
       <img src="./img/icon.png" alt="icon">
-      <form>
+      <form class = 'special'>
         <input type="text" placeholder="Location..."></input>
         <button type="submit">GO</button>
       </form>
@@ -48,7 +48,9 @@
                     </div>
                 </div>
                 <div class="add">
-                    <h3>+</h3>
+                    <a href="./addLoc.html">
+                        <h3>+</h3>
+                    </a>
                 </div>
             </div>
             <div class="graph">
