--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         <div class="loader hide">
             <div></div>
         </div>
+        <div class="fallback"></div>
         <div class="wrapperTo hide">
             <div class="container">
                 <i>icon here</i>
