--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,13 @@
         <button type="submit">GO</button>
       </form>
     </header>
-    <br>
     <!-- Powred by<a href="#">Dark Sky API</a> and <a href="#">Mapbox API</a> -->
 
     <div class="main">
         <div class="loader hide">
             <div></div>
         </div>
-        <div class="fallback"></div>
+        <div class="fallback" style="color:rgb(214, 73, 73);width:70vw;margin:50px auto 0;"></div>
         <div class="wrapperTo hide">
             <div class="container">
                 <i>icon here</i>
@@ -43,22 +42,22 @@
             <div class ="locations">
                 <div>
                     <h3>location1</h3>
-                    <div class="footer">
+                    <!-- <div class="footer">
                         <h4>28C</h4>
                         <h4>15C</h4>
-                    </div>
+                    </div> -->
                 </div>
-                <div class="add">
+                <span class="add">
                     <a href="./addLoc.html">
                         <h3>+</h3>
                     </a>
-                </div>
+                </span>
             </div>
             <div class="graph">
 
             </div>
         </div>
     </div>
-    <script src="./main.js"></script>
+    <script src="./scripts/main.js"></script>
 </body>
 </html>
