--- a/public/addLoc.html
+++ b/public/addLoc.html
@@ -24,7 +24,7 @@
             <div class="loader hide">
                 <div></div>
             </div>
-            <div class="fallback">
+            <div class="fallback" style="color:rgb(214, 73, 73);width:70vw;margin:50px auto;">
 
             </div>
             <div class="wrapperTo hide">
@@ -35,6 +35,6 @@
             </div>
         </div>       
     </div>
-    <script src="./addLoc.js"></script>
+    <script src="./scripts/addLoc.js"></script>
 </body>
 </html>
