--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <header>
       <img src="./img/icon.png" alt="icon">
       <form class = 'special'>
-        <input type="text" placeholder="Location..."></input>
+        <input type="text" placeholder="Lotion..."></input>
         <button type="submit">GO</button>
       </form>
     </header>
